--- a/Index.org
+++ b/Index.org
@@ -272,7 +272,7 @@ https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images
 #+Caption: Carotid artery with overlying cranial nerves. Hypoglossus NXII and Ansa Cervicalis.
 #+ATTR_HTML: :width 45% :align left
 https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid_artery_CN2.png
-** Carotid Artery Occlusion
+** Carotid Artery Occlusion - COVID19 Vaccination
 #+ATTR_HTML: :width 80%
 @@html:<center>@@
 https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/NEJM%20VITT%20Carotid.jpg
